<resources>
    <string name="app_name">Si7ateck</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sign In</string>
    <string name="nav_header_subtitle">Add your Etablissement</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home_title">Si7ateck</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">My Favorites</string>
    <string name="menu_setting">Settings</string>

    <string name="menu_about">About us</string>
    <string name="menu_share">Share the app</string>
    <string name="menu_contact">Contact Us</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="keep_me_sign_in">Keep me sign in</string>
    <string name="account_managing">Account managing</string>

    <string name="action_sign_in_short" translatable="false">Register</string>
    <string name="email" translatable="false">Email</string>
    <string name="minimum_password" translatable="false">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed" translatable="false">Authentication failed, check your email and password or sign up</string>
    <string name="change_email" translatable="false">Change Email</string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="send_password_reset_email" translatable="false">Send Password reset email</string>
    <string name="remove_user" translatable="false">Remove user</string>
    <string name="new_pass" translatable="false">New Password</string>
    <string name="title_activity_profile" translatable="false">Firebase</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_name" translatable="false">Fullname</string>
    <string name="btn_login" translatable="false">LOGIN</string>
    <string name="prompt_password" translatable="false">Please enter your password</string>
    <string name="btn_link_to_register" translatable="false">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login" translatable="false">Already registered. Login Me!</string>
    <string name="title_activity_reset_password" translatable="false">ResetPasswordActivity</string>
    <string name="btn_forgot_password" translatable="false">Forgot your password?</string>
    <string name="btn_reset_password" translatable="false">Reset Password</string>
    <string name="btn_back" translatable="false"><![CDATA[<< Back]]></string>
    <string name="hint_new_email" translatable="false">New Email</string>
    <string name="btn_change" translatable="false">Change</string>
    <string name="btn_send" translatable="false">Send</string>
    <string name="btn_remove" translatable="false">Remove</string>
    <string name="btn_sign_out" translatable="false">Sign Out</string>
    <string name="lbl_forgot_password" translatable="false">Forgot password?</string>
    <string name="forgot_password_msg" translatable="false">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id" translatable="false">Email ID</string>


    <!-- Preference Titles -->
    <string name="compte_sahti_fi_yedi">Compte Sahti Fi Yedi</string>
    <string name="sync_header">Sync</string>

    <!-- compte Preferences -->
    <string name="sauvgarder">Sauvgarder mes données</string>
    <string name="sauvgarder_on">Vous donnés sont sauvgarder en mode offline</string>
    <string name="sauvgarder_off">Vous risquez de perdre tout les informations sur vous en cas de coupure internet </string>


    <!-- Gestion Preferences -->
    <string name="gestion_globale">Gestion globale</string>
    <string name="langue">Langue</string>
    <string name="localisation">Localisation</string>

    <string name="localisation_gps_autoriser">Vous autorisez la détection de votre emplacement via le GPS</string>
    <string name="localisation_gps_non_autoriser">Vous n\'autorisez pas la détection de votre emplacement via le GPS</string>


    <!-- langues Preferences -->
    <string name="arabe">Arabe</string>
    <string name="french">Français</string>
    <string name="english">English</string>

    <!-- mode night Preferences -->
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>


    <!-- GPS Preferences -->
    <string name="non_autoriser">Activer</string>
    <string name="autoriser">Désactiver</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Mise à jour du données</string>
    <string name="attachment_title">Mode de téléchargement</string>
    <string name="attachment_summary_on">Téléchargez uniquement par Wifi</string>
    <string name="attachment_summary_off">Téléchargez automatiquement les mises à jour lorsque vous etes connecté à un réseau Wi-Fi ou bien les réseaux mobiles</string>
    <string name="pr_prenom">Prénom</string>
    <string name="nom">Nom</string>

</resources>