<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/gestion_globale"
        app:iconSpaceReserved="false"
        app:singleLineTitle="true">
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_round_save_24"
            app:defaultValue="true"
            app:key="saveUser"
            app:title="@string/sauvgarder"
            app:summaryOff="@string/sauvgarder_off"
            app:summaryOn="@string/sauvgarder_on"/>

    </PreferenceCategory>

    <PreferenceCategory

        app:iconSpaceReserved="false"
        app:title="@string/gestion_globale"
        app:singleLineTitle="true">
        <ListPreference
            app:iconSpaceReserved="true"
            app:icon="@drawable/ic_round_translate_24"
            app:defaultValue="English"
            app:entries="@array/langues_values"
            app:entryValues="@array/langues_entries"
            app:key="language"
            app:title="@string/langue"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/dark_mode_def_value"
            app:icon="@drawable/ic_baseline_dark_mode_24"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_values"
            app:key="@string/dark_mode"
            app:title="@string/dark_mode"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_round_gps_fixed_24"
            app:defaultValue="true"
            app:key="localisation"
            app:summaryOff="@string/localisation_gps_autoriser"
            app:summaryOn="@string/localisation_gps_non_autoriser"
            app:title="@string/localisation" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_round_sync_24"
            app:defaultValue="true"
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_round_save_24"
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_on"
            app:summaryOn="@string/attachment_summary_off"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
</PreferenceScreen>