<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:iconTint="@color/black"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_setting"
            android:iconTint="@color/black"
            />

    </group>

    <item android:title="Communication">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_outline_info_24"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_contact" />
        </menu>
    </item>
</menu>